--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -31,6 +31,6 @@ output:
   workflowr::wflow_html:
     toc: yes
     toc_float: yes
-    theme: sandstone
+    theme: flatly
     highlight: textmate
     code_folding: show
