wflow_publish(c("analysis/_site.yml", "analysis/Introduction.Rmd",     "analysis/references.bib", "analysis/science.csl"), republish = TRUE)

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -31,6 +31,6 @@ output:
   workflowr::wflow_html:
     toc: yes
     toc_float: yes
-    theme: flatly
+    theme: sandstone
     highlight: textmate
     code_folding: show
