wflow_publish("analysis/_site.yml", republish = TRUE)

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left:
   - text: Table of contents
     href: index.html
+  - text: Introduction
+    href: Introduction.html
   - text: Vignettes
     menu:
       - text: Structural analysis with MISTy - based on cell2location deconvolution
